--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 
  DB_CONNECTION=mysql
- DB_HOST=database-1.cycybnkfrynb.us-east-2.rds.amazonaws.com
+ DB_HOST=database-2.cdeckzjqsn3t.us-east-2.rds.amazonaws.com
  DB_PORT=3306
  DB_DATABASE=fundacion_cinda_panda
  DB_USERNAME=AdminCinda
